# ODLabel

./: CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
Autolabel/AutolabelGUI/: Autolabel.py  OpenAutolabel.py  README.txt  With_16_batches.py  main_window.py  object_detection_worker.py
Autolabel/AutolabelGUI/Od-labeler-v2/: detection_utils.py  main.py  main_window.py  thread_worker.py
Autolabel/AutolabelGUI/Od-labeler-v3/: detection_utils.py  main.py  main_window.py  thread_worker.py
Autolabel/AutolabelGUI/Od-labeler-v4/: chart_utils.py  detection_utils.py  main.py  main_window.py  thread_worker.py  write_utils.py
Autolabel/AutolabelGUI/Od-labeler-v5/: chart_utils.py  main.py  (+4 more)
Deploy/New System GUI/: custom_data.yaml  main.py  main_window.py  object_detection_worker.py
Deploy/ONNX runtime/: Onnx_Image.py  Onnx_Video.py  metaonnxaa.py
Requirements/: AMD Requirement  CPU Requirement  NVIDIA Requirement
Validate_labels/: README  validate_labels.py
app/: __init__.py  main.py  main_window.py
app/workers/: detection_worker.py
assets/: yolov8l-worldv2.onnx  yolov8m-worldv2.onnx  yolov8x-worldv2.onnx
odlabel_onnx/: requirements.txt  setup.cfg  setup.py
odlabel_onnx/app_onnx/: main_window.py
odlabel_onnx/app_onnx/workers/: detection_worker.py  yoloworld_onnx.py
odlabel_onnx/app_onnx/workers/utils/: detection_utils.py
odlabel_torch/: requirements.txt  setup.cfg  setup.py
odlabel_torch/app/: main_window.py
odlabel_torch/app/workers/: chart_worker.py
odlabel_torch/app/workers/utils/: chart_utils.py  draw_utils.py  write_utils.py
(+8 files in other folders)
