[metadata]
description-file = README.md

[options]
packages = find:
install_requires =
    setuptools==69.5.1
    wheel==0.43.0
    customtkinter
    ultralytics
    matplotlib
    numpy
    opencv-python
    torch>=1.7.0
    torchvision>=0.8.0
    clip-for-odlabel
python_requires = >=3.9
include_package_data = True
